# UsageDock

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v0.2.6.md  RELEASE_NOTES_v0.2.7.md  RELEASE_NOTES_v0.2.8.md  RELEASE_NOTES_v0.2.9.md  SECURITY.md  UPDATER_SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
src/: App.css  App.tsx  ProviderIcons.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/providers/: antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  mod.rs  windsurf.rs
