[package]
name = "usagedock"
version = "0.2.2"
description = "Cross-platform AI coding subscription usage tracker"
authors = ["anshu"]
edition = "2021"

[lib]
name = "usagedock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
log = "0.4"
tauri-plugin-log = "2"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
